# kale

./: .editorconfig  .gitignore  .hlint.yaml  .travis.yml  LICENSE  Makefile  README.md  kale.cabal  stack.yaml
app/: Main.hs
example/: example.cabal  stack.yaml
example/app/: Main.hs
example/src/: Lib.hs
example/src/Lib/: ArgsTask.hs  BarTask.hs  FooTask.hs  PosTask.hs
src/: Kale.hs
src/Kale/: Discover.hs
test/: KaleSpec.hs
