name:                kale
version:             0.1.0.0
synopsis:            Automatic command line task discovery
description:         Please see README.md for more details.
homepage:            https://github.com/parsonsmatt/kale#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2017 Matt Parsons
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , LICENSE
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kale
                     , Kale.Discover
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , transformers
                     , optparse-generic
  default-language:    Haskell2010

executable kale
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kale
  default-language:    Haskell2010

test-suite kale-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kale
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       KaleSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/kale
